; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_carthw_prot_lk3_startup.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/pico/carthw/extr_carthw.c_carthw_prot_lk3_startup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i64 }

@EL_STATUS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"lk3 prot emu startup\00", align 1
@Pico = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@.str.1 = private unnamed_addr constant [4 x i8] c"OOM\00", align 1
@carthw_prot_lk3_mem_setup = common dso_local global i32 0, align 4
@PicoCartMemSetup = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @carthw_prot_lk3_startup() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @EL_STATUS, align 4
  %3 = call i32 @elprintf(i32 %2, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0))
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 1), align 8
  %5 = add nsw i64 %4, 32768
  %6 = call i32 @PicoCartResize(i64 %5)
  store i32 %6, i32* %1, align 4
  %7 = load i32, i32* %1, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %0
  %10 = load i32, i32* @EL_STATUS, align 4
  %11 = call i32 @elprintf(i32 %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0))
  br label %19

12:                                               ; preds = %0
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 0), align 8
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 1), align 8
  %15 = add nsw i64 %13, %14
  %16 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Pico, i32 0, i32 0), align 8
  %17 = call i32 @memcpy(i64 %15, i64 %16, i32 32768)
  %18 = load i32, i32* @carthw_prot_lk3_mem_setup, align 4
  store i32 %18, i32* @PicoCartMemSetup, align 4
  br label %19

19:                                               ; preds = %12, %9
  ret void
}

declare dso_local i32 @elprintf(i32, i8*) #1

declare dso_local i32 @PicoCartResize(i64) #1

declare dso_local i32 @memcpy(i64, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
